bugfix: Remove select for overflow elements

--- a/src/index.css
+++ b/src/index.css
@@ -924,6 +924,7 @@ section {
 
   section {
     padding: 1.5rem 17.5vw;
+    overflow: hidden;
   }
 
   .btn {
